2008-11-03  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1231 - Build fails in gles flavour in revision 3442

	* clutter/cogl/gles/cogl-context.h: Fix remaining use of
	ClutterFixed over CoglFixed. (Michael Boccara)

2008-11-03  Neil Roberts  <neil@linux.intel.com>

	Bug 1207 - Timelines sometime miss markers

	* clutter/clutter-timeline.c (timeline_timeout_func): Move the
	code for firing the new-frame and marker-reached signals into a
	separate static function so that it can also be called when the
	last frame is reached. Also fix an issue where the frame numbers
	were changed in the wrong direction when detecting missed markers
	in a reversed timeline. Based on a patch by Michael Boccara.

	* tests/test-timeline.c: Now tries to automatically verify whether
	the test worked by keeping track of all the signal emissions. The
	timelines are run a second time with an extra timeout that causes
	delays to simulate skipped frames.

2008-10-31  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/pango/cogl-pango-fontmap.c:
	* clutter/pango/cogl-pango-render.c: Whitespace fixes and code
	duplication removal. Plus, start documenting the CoglPango API.

2008-10-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: (clutter_texture_set_filter_quality),
	(clutter_texture_get_filter_quality):
        Fix up some logic, typos.        

	* clutter/glx/clutter-glx-texture-pixmap.c:
        Improve support for mipmaped TFP textures.

2008-10-31  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1200 - Crash with invalid DISPLAY

	* clutter/clutter-main.c: Use the ClutterBackend wrapper API
	instead of directly checking the class structure.

	* clutter/glx/clutter-backend-glx.c: Return the correct value
	in case of failure.

	* clutter/x11/clutter-backend-x11.c: Bail out if XOpenDisplay()
	failed.

2008-10-30  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/cogl/cogl-color.h:
	* clutter/cogl/cogl-fixed.h:
	* clutter/cogl/cogl-offscreen.h: